Recently opened Firefox window on Wayland may be empty / fully transparent
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
diannaS
:
approval-mozilla-release+
|
Details | Review |
In case newly opened window is not immediately visible (for instance is opened by remote instance), the window is created as occluded and can't be flipped back to visible.
We need to call explicitly NotifyOcclusionState(VISIBLE) from OnExposeEvent() to fix that as we know the window is visible.
Assignee | ||
Comment 1•2 years ago
|
||
Assignee | ||
Updated•2 years ago
|
Comment 3•2 years ago
|
||
bugherder |
Assignee | ||
Comment 4•2 years ago
|
||
Comment on attachment 9327942 [details]
Bug 1827429 [Wayland] Call NotifyOcclusionState(OcclusionState::VISIBLE) from nsWindow::OnExposeEvent() as we know the window is visible r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Newly opened Firefox window may be invisible/empty on Wayland.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): We enable rendering (set visible occlusion state) in Expose event which paints Firefox window.
We used VSync for that only before this patch. - String changes made/needed:
- Is Android affected?: No
Comment 5•2 years ago
|
||
Comment on attachment 9327942 [details]
Bug 1827429 [Wayland] Call NotifyOcclusionState(OcclusionState::VISIBLE) from nsWindow::OnExposeEvent() as we know the window is visible r?emilio
Approved for 113 beta 3, thanks.
Comment 6•2 years ago
|
||
bugherder uplift |
Comment 8•2 years ago
|
||
Comment on attachment 9327942 [details]
Bug 1827429 [Wayland] Call NotifyOcclusionState(OcclusionState::VISIBLE) from nsWindow::OnExposeEvent() as we know the window is visible r?emilio
Beta/Release Uplift Approval Request
- User impact if declined: Flatpak doesn't display sometimgs
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): GTK only fix has been verified.
- String changes made/needed:
- Is Android affected?: No
Comment 9•2 years ago
|
||
If we do another dot release, it would be nice to grab this.
Comment 10•2 years ago
|
||
Comment on attachment 9327942 [details]
Bug 1827429 [Wayland] Call NotifyOcclusionState(OcclusionState::VISIBLE) from nsWindow::OnExposeEvent() as we know the window is visible r?emilio
Approved for 112.0.2 dot release
Comment 11•2 years ago
|
||
bugherder uplift |
Updated•2 years ago
|
Description
•