Bug 1827429 [Wayland] Call NotifyOcclusionState(OcclusionState::VISIBLE) from nsWindow::OnExposeEvent() as we know the window is visible r=emilio a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D175138